# venturetruth

./: .env  .env.example  .gitignore  LICENSE  README.md  SummarizeClaims.py  extract_claims.py  json_chat_csv.py  pyproject.toml  test_notebook.ipynb
claim_extractor/: _init_.py  cli.py  core.py  extract_claims.py  instruction.md  prompts.py  schemas.py  utils.py
claim_verification/: .gitignore  README.md  claim.py  claim_list.py  claim_verifier.py  requirements.txt  schemes.py  search_manager.py  test_notebook.ipynb  verification_list.py  verification_result.py
config/: config.yaml
file_content_extraction/: extract_file_data.py
poster/: main.tex
report/: bibiliography.bib  main.tex
report/sections/: appendix.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_literature.tex  results.tex
res/: article.txt
src/: main.py  main_pipeline.py
src/claim_extractor/: claim_extractor.py  prompt_builder.py
src/claim_verification/: claim_verifier.py  search_manager.py
src/common/: result_aggregator.py  schemes.py
src/evaluation/: __init__.py  claims_evaluation_schemes.py  claims_evidence_analyzer.py  evaluation_schemes.py  human_calibration.py  metadata_evaluator.py  prompt_variations.py  robustness_checker.py
src/evaluation/calibration_resources/: LLM Annotations.xlsx  Manual Annotation.xlsx
src/file_content_extraction/: base_extractor.py  data_loader.py  data_schemes.py  ingestion_pipeline.py  ocr_extractor.py  pdf_processor.py  standard_extractor.py
src/quality_checker/: __init__.py  quality_checker.py
src/utils/: utils.py
